# blackjack-simulator

./: .gitignore  LICENSE  pyproject.toml
blackjack_simulator/: betting_strategies.py  card.py  hand.py  table.py  utils.py
notebooks/: create_test_cases.ipynb  exploration.ipynb
tests/: test_betting_strategies.py  test_blackjack_simulator.py  test_cases_book_with_action.csv
