[tool.poetry]
name = "blackjack-simulator"
version = "0.1.0"
description = ""
authors = ["tzechiop <thasegawa90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
ipympl = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
